--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body{
          body{
                margin:0;
 			   padding:0;
-			   background: url(Website%20Background.jpg);
+			   background: url(https://images-na.ssl-images-amazon.com/images/I/513QXtp6GHL._UY395_.jpg);
 			   background-size: cover;
 			   background-position:center;
 			              }
