--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 <style>
-body{
-               background-color:rgb(25, 148, 320);
-           }
+
                                    
 #h1{
                text-align:center;
@@ -15,9 +13,10 @@ body{
          body{
                margin:0;
 			   padding:0;
-			   background: url(https://images-na.ssl-images-amazon.com/images/I/513QXtp6GHL._UY395_.jpg);
+			   background: url(Website%20Background.jpg);
 			   background-size: cover;
 			   background-position:center;
+			   background-color:rgb(25, 148, 320);
 			              }
           p{
               font-family:;
@@ -33,7 +32,7 @@ body{
 <li>Montgomery History</li>
 </ul>
 <p>The Alabama of today is so much differnt than the Alabama that it was when is was first found. Alabama has made a huge mark in history when it comes to alot of things. It has produced alot of cotton and penuts.  </p>
-<h2 id = "#meh">Mobile History</h2>
+<h2 id = "meh">Mobile History</h2>
 <h3>Early Mobile History</h3>
 
  <p>Spanish explorers discovered Mobile in the 1500s. At first the Spanish called Mobile Bay the
