--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ function startTime() {
 startTime();
 
 #txt{
-	top:10px;
-	left:10px;
+	top:100px;
+	left:100px;
 }
 .phone {
     position: relative;
@@ -124,7 +124,7 @@ startTime();
                 <div class="v-btn b"></div>         
                 <div class="home-btn"></div>   
                 <div class="screen">
-                    <iframe class="iframe" src="https://www.google.com/search?igu=1" frameborder="0" height="100%" width="100%"></iframe>
+                    <iframe class="iframe" src="https://outlook.office.com/mail/inbox#authRedirect=true" frameborder="0" height="100%" width="100%"></iframe>
                 </div>    
             </div>
         </div>
