--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@ startTime();
                 <div class="v-btn b"></div>         
                 <div class="home-btn"></div>   
                 <div class="screen">
-                    <iframe class="iframe" src="https://15netclass.blackbaudondemand.com/NetClassroom7/Forms/NCShell.aspx" frameborder="0" height="100%" width="100%"></iframe>
+                    <iframe class="iframe" src="https://www.coolmathgames.com/" frameborder="0" height="100%" width="100%"></iframe>
                 </div>    
             </div>
         </div>
     </div>
+<p>WE LOVE HENRY!!</p>	
 
 <script id ="time" >
 function startTime() {
