--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ startTime();
 .home-btn {
     position: absolute;
     top: 88%;
-    left: 41%;
+    left: 39%;
     height: 9%;
     width: 17%;
     background-color: #000000;
@@ -115,8 +115,8 @@ startTime();
     position: absolute;
     top: 11.6%;
     left: 3.5%;
-    width: 93%;
-    height: 75%;
+    width: 298px;
+    height: 470px;
     background-color: #e7e7e7;
 	z-index:2;
 }
@@ -126,9 +126,14 @@ startTime();
     left: 3.5%;
     width: 93%;
     height: 3%;
-    background-color: #e7e7e7;
 	z-index:3;
 	background-color:rgb(0, 204, 255);
+}
+.iframe{
+	top: 11.6%;
+    left: 3.5%;
+    width: 294px;
+    height: 470px;
 }
 
 </style>
@@ -140,10 +145,11 @@ startTime();
                 <div class="p-btn"></div>
                 <div class="v-btn t"></div>
                 <div class="v-btn b"></div>
-				           
+				 <div class="home-btn"></div>          
                 <div class="screen">
-                    <iframe class="iframe" src="https://mobilehistory.github.io/"></iframe>
-                </div>    
+				<iframe class="iframe" src="https://outlook.office.com/mail/inbox/id/AAQkAGM3MDIxYzhhLWU1YTctNDQ1Ny1iNzRjLTA0MDJhOGJjMjJhNwAQAN5veCxTbkOGk0klkcQ%2FeaI%3D"></iframe>   
+
+                                 </div>    
 				<div class="topbar"></div>
             </div>
         </div>
