--- a/index.html
+++ b/index.html
@@ -13,22 +13,31 @@
          body{
                margin:0;
 			   padding:0;
-			   background: url(Website%20Background.jpg);
 			   background-size: cover;
 			   background-position:center;
 			   background-color:rgb(25, 148, 320);
 			              }
           p{
               font-family:;
+			  padding:20px;
           } 
 		  #meh{
-		  	
-		  }                 
+		  	padding:20px;
+		  }
+		  .bh{
+		  	padding:20px;
+		  }   
+		  h2{
+		  	padding:20px;
+		  }             
+		  h3{
+		  	padding:20px;
+		  } 
 </style>
 <h1 id = "h1">Alabama History </h1>
 <ul>
 <li><a href = "#meh">Mobile History</a></li>
-<li>Birmingham History</li>
+<li><a href = "#bhh">Birmingham History</a></li>
 <li>Montgomery History</li>
 </ul>
 <p>The Alabama of today is so much differnt than the Alabama that it was when is was first found. Alabama has made a huge mark in history when it comes to alot of things. It has produced alot of cotton and penuts.  </p>
@@ -69,8 +78,8 @@ Bay of the Holy Spirit. Mobile was discovered only 27 years after America was fo
 						 was made. The city they built around the fort became todays Mobile. The French kept Mobile 
 						 until the peace treaty of Paris in 1765 which made Mobile the English's. </p>
 						 
-				<h2>Birmingham History</h2>
-				<h3>Early Birmingham History</h3>
+				<h2 class = "bh" id = "bhh">Birmingham History</h2>
+				<h3 class = "bh "id = "ebh">Early Birmingham History</h3>
 				<p>Birmingham is found in the northern part of Alabama and with an estimated population of 217,158, it has the
  most population of a city in Alabama. Birmingham is an important regional hub and it is associated with The 
  Piedmont and Appalachian regins of Alabama. Birmingham was founded in 1871 during post-Civil War Reconstruction
