--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Alabama History</title>
+	<title>Science</title>
 </head>
 <body>
 <style>
@@ -34,63 +34,8 @@
 		  	padding-left:20px;
 		  } 
 </style>
-<h1 id = "h1">Alabama History </h1>
-<ul>
-<li><a href = "#meh">Mobile History</a></li>
-<li><a href = "#bhh">Birmingham History</a></li>
-<li>Montgomery History</li>
-</ul>
-<p>The Alabama of today is so much differnt than the Alabama that it was when is was first found. Alabama has made a huge mark in history when it comes to alot of things. It has produced alot of cotton and penuts.  </p>
-<h2 id = "meh">Mobile History</h2>
-<h3>Early Mobile History</h3>
-
- <p>Spanish explorers discovered Mobile in the 1500s. At first the Spanish called Mobile Bay the
-Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher
-	 Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would 
-		  take 20 years for a European to step in today's Alabama! </p>
-			<p> <br>In between 1539 and 1541 explorer, almost
-	Hernando De Soto, explored and, defeated the Indian city, Mauvila, which is where today's Mobile gets its name.
- The battle was against Chief Tuscaloosa and his people. They were stationed north of today's Mobile. Tuscaloosa 
-   was not killed or captured but  everyone who lived in Mauvila was killed. Then, Tristán de Luna y Arellano and his
-				 crew landed in Mobile Bay in 1559 then a hurricane came, and it destroyed their colony and their 
-					ships. </p>
-					<p> <br>A French man named Pierre Le Moyne, Sieur d’Iberville and his men were the first Europeans
-					  to make a mark on Mobile. In the late 1600s, the French government was trying to make some
-					   settlements and claim the mouth of the Mississippi River. When the Spanish learned the 
-					   French's plan they quickly went and claimed the Pensacola Bay. After Iberville's first trip
-					   the French sent him again and he made warehouses and port faculties on today's Dauphin Island
-						because of how deep the water is. They also did it to slow the English and the Spanish on thier 
-						way to the mouth of the Mississippi River. They named the island "Massacre Island” because
-						they found about sixty skeletons on the island when they got there. By 1701, Massacre Island had become a military base
-						because the French conquered Louisiana and Iberville's brother (Jean-Baptiste Le Moyne de Bienville) succeeded Iberville as Governor. </p>
-						
-						<p> <br><br>Because of Iberville's request, Bienville went to go establish the first "Mobile settlement"
-						 and the capital of Louisiana in 1702 upstream from Mobile Bay on the side of the Tensaw River at 27-Mile Bluff. 
-						 The city was built around Mobile Indian villages. Mobile had a fort built into the center 
-						 of the town. Its name was Fort Louis de la Louisiane de Mobile it was named for their grand 
-						 Monarch and employer, King Louis the XIV. One reason the made the original Mobile 27 miles upstream was so
-						 they could encourage live on the river. Within two years (1704) Fort Louis was the French's focus.
-						 Mobile now had 80 houses and a population of 259. The river provided an easy way to get to the city, but it also provided 
-						 lots of flooding. </p>
-						 <p><br><br>The French relocated the town to the mouth of Mobile River in 1711. There were many reasons for the 
-						 move, but the main ones were flooding, outbreaks of disease, and problems proving ok defenses for 
-						 the port at Dauphin Island. They made a new fort called Fort Conde after the King's cousin
-						 was made. The city they built around the fort became todays Mobile. The French kept Mobile 
-						 until the peace treaty of Paris in 1765 which made Mobile the English's. </p>
-						 
-				<h2 class = "bh" id = "bhh">Birmingham History</h2>
-				<h3 class = "bh "id = "ebh">Early Birmingham History</h3>
-				<p>Birmingham is found in the northern part of Alabama and with an estimated population of 217,158, it has the
- most population of a city in Alabama. Birmingham is an important regional hub and it is associated with The 
- Piedmont and Appalachian regins of Alabama. Birmingham was founded in 1871 during post-Civil War Reconstruction
-  era. It was made when three farm towns meged together. Birmingham was named for Birmingham, England, UK. Birmingham
-  became a industrial center, based on mining iron and making railroads. Most of the origanal founders of Birmingham 
-  had English ancestry.  </p>
-<h3>Birmingham Facts</h3>
-
-<p>www.en.wikipedia.com<br>www.mobilebaynep.com </p>
-
-
+<h1 id = "h1">Mrs. Cherniak </h1>
+	<p>Hi .</p>
 
 </body>
 </html>
